<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.geekhamza.isi.AddDemande">
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="60dp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_demande_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_demande_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_demande_last_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_demande_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_Last_name" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_demande_comment_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_demande_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comment" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_demande_module_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_demande_module"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_module" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_demande_niveau_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/add_demande_niveau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:hint="@string/hint_group"
            android:spinnerMode="dialog" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_demande_group_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_demande_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_group" />

    </android.support.design.widget.TextInputLayout>
    <Button android:id="@+id/add_demande_btn_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Send"
        android:onClick="SendForm"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"/>
    </LinearLayout>



</ScrollView>
